# LearnHowToProgram

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle.kts
c/: 01helloworld.c  03system.c  04string_format.c  06keyword1.c  09keyboard_input.c  10sizeof_test.c  12binary_number.c  12extern_keyword.c
c/leetcode/: 9_palindrome.c
src/main/c/: 02comment.c  05var_and_val.c  07buy_items.c  08define_constant.c  11typedef.c  13position.c
src/main/c/leetcode/: 1_twoSum.c  9_palindrome.c
src/main/kotlin/net/deechael/learning/kt/: Kt01_HelloWorld.kt
src/test/kotlin/net/deechael/learning/kt/: Kt02_Function.kt  Kt03_Null.kt  Kt04_Loop.kt
